Fixed double border on autofill inputs.

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,6 @@
 body {
   overflow-y: hidden;
-  h1 {
+  .custom-h1 {
     font-size: 4rem;
     font-weight: 700;
     color: whitesmoke;
